[package]
name = "drill"
version = "0.1.0"
authors = ["dheu <gwimminus@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9.12"
indicatif = "0.11.0"
regex = "1.1.2"
select = "0.4.2"
tempfile = "3.0.7"
# mustache = "0.9.0"
